// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryLoggingConfig Construct(QueryLoggingConfig):  Snapshot Test 1`] = `
{
  "Resources": {
    "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC": {
      "DependsOn": [
        "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomQueryLoggingConfigAssociationCustomResourceProviderLogGroupD12EADAE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "Key961B73FD",
            "Arn",
          ],
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "route53resolver:DisassociateResolverQueryLogConfig",
                    "route53resolver:AssociateResolverQueryLogConfig",
                    "route53resolver:ListResolverQueryLogConfigs",
                    "route53resolver:GetResolverQueryLogConfig",
                    "route53resolver:ListResolverQueryLogConfigAssociations",
                    "ec2:DescribeVpcs",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": {
                    "ForAnyValue:StringEquals": {
                      "iam:AWSServiceName": [
                        "route53resolver.amazonaws.com",
                      ],
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlQueryLoggingTest70DD9614": {
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "TestLogGroup4EEF7AD4",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Route53Resolver::ResolverQueryLoggingConfig",
    },
    "Key961B73FD": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "S3QueryLoggingTestA05F494B": {
      "Properties": {
        "DestinationArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":s3:::testbucket",
            ],
          ],
        },
      },
      "Type": "AWS::Route53Resolver::ResolverQueryLoggingConfig",
    },
    "TestLogGroup4EEF7AD4": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestLogGroupPolicyResourcePolicyFDE53895": {
      "Properties": {
        "PolicyDocument": {
          "Fn::Join": [
            "",
            [
              "{"Statement":[{"Action":["logs:CreateLogStream","logs:PutLogEvents"],"Condition":{"StringEquals":{"aws:PrincipalOrgId":"o-123test"}},"Effect":"Allow","Principal":{"Service":"delivery.logs.amazonaws.com"},"Resource":"",
              {
                "Fn::GetAtt": [
                  "TestLogGroup4EEF7AD4",
                  "Arn",
                ],
              },
              ":log-stream:*","Sid":"Allow log delivery access"}],"Version":"2012-10-17"}",
            ],
          ],
        },
        "PolicyName": "TestLogGroupPolicy628CC4FE",
      },
      "Type": "AWS::Logs::ResourcePolicy",
    },
    "TestQueryLoggingAssocQueryLoggingConfigAssociationE89E2286": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomQueryLoggingConfigAssociationCustomResourceProviderLogGroupD12EADAE",
      ],
      "Properties": {
        "ResolverQueryLogConfigId": {
          "Fn::GetAtt": [
            "S3QueryLoggingTestA05F494B",
            "Id",
          ],
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC",
            "Arn",
          ],
        },
        "VpcId": "TestVpc",
      },
      "Type": "Custom::QueryLoggingConfigAssociation",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`QueryLoggingConfig Construct(QueryLoggingConfig):  Snapshot Test 2`] = `
{
  "Resources": {
    "CustomLogResourcePolicyCustomResourceProviderHandlerB58C0C34": {
      "DependsOn": [
        "CustomLogResourcePolicyCustomResourceProviderRole83D4C53E",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomLogResourcePolicyCustomResourceProviderRole83D4C53E",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomLogResourcePolicyCustomResourceProviderLogGroupB4DDD051": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "Key961B73FD",
            "Arn",
          ],
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomLogResourcePolicyCustomResourceProviderHandlerB58C0C34",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomLogResourcePolicyCustomResourceProviderRole83D4C53E": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "logs:PutResourcePolicy",
                    "logs:DeleteResourcePolicy",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC": {
      "DependsOn": [
        "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomQueryLoggingConfigAssociationCustomResourceProviderLogGroupD12EADAE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "Key961B73FD",
            "Arn",
          ],
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomQueryLoggingConfigAssociationCustomResourceProviderRole0317AB9A": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "route53resolver:DisassociateResolverQueryLogConfig",
                    "route53resolver:AssociateResolverQueryLogConfig",
                    "route53resolver:ListResolverQueryLogConfigs",
                    "route53resolver:GetResolverQueryLogConfig",
                    "route53resolver:ListResolverQueryLogConfigAssociations",
                    "ec2:DescribeVpcs",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": {
                    "ForAnyValue:StringEquals": {
                      "iam:AWSServiceName": [
                        "route53resolver.amazonaws.com",
                      ],
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomQueryLoggingConfigCustomResourceProviderHandler2B99DCC6": {
      "DependsOn": [
        "CustomQueryLoggingConfigCustomResourceProviderRole70878758",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "REPLACED-GENERATED-NAME.zip",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigCustomResourceProviderRole70878758",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomQueryLoggingConfigCustomResourceProviderLogGroup58425034": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "KmsKeyId": {
          "Fn::GetAtt": [
            "Key961B73FD",
            "Arn",
          ],
        },
        "LogGroupName": {
          "Fn::Join": [
            "",
            [
              "/aws/lambda/",
              {
                "Ref": "CustomQueryLoggingConfigCustomResourceProviderHandler2B99DCC6",
              },
            ],
          ],
        },
        "RetentionInDays": 3653,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomQueryLoggingConfigCustomResourceProviderRole70878758": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "route53resolver:ListResolverQueryLogConfigs",
                    "route53resolver:CreateResolverQueryLogConfig",
                    "route53resolver:DeleteResolverQueryLogConfig",
                    "logs:*",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                {
                  "Action": [
                    "iam:CreateServiceLinkedRole",
                  ],
                  "Condition": {
                    "ForAnyValue:StringEquals": {
                      "iam:AWSServiceName": [
                        "route53resolver.amazonaws.com",
                      ],
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CwlQueryLoggingTestLogResourcePolicy9F3660E7": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomLogResourcePolicyCustomResourceProviderLogGroupB4DDD051",
        "CwlQueryLoggingTestQueryLoggingConfig7F7EA5E9",
      ],
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomLogResourcePolicyCustomResourceProviderHandlerB58C0C34",
            "Arn",
          ],
        },
        "policyName": "AllowLogDeliveryAccess",
        "policyStatements": [
          {
            "Action": [
              "logs:CreateLogStream",
              "logs:PutLogEvents",
            ],
            "Effect": "Allow",
            "Principal": {
              "Service": "delivery.logs.amazonaws.com",
            },
            "Resource": [
              {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "TestLogGroup4EEF7AD4",
                        "Arn",
                      ],
                    },
                    ":log-stream:*",
                  ],
                ],
              },
            ],
            "Sid": "Allow log delivery access",
          },
        ],
      },
      "Type": "Custom::LogResourcePolicy",
      "UpdateReplacePolicy": "Delete",
    },
    "CwlQueryLoggingTestQueryLoggingConfig7F7EA5E9": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomQueryLoggingConfigCustomResourceProviderLogGroup58425034",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::GetAtt": [
            "TestLogGroup4EEF7AD4",
            "Arn",
          ],
        },
        "Name": "CwlQueryLoggingTest",
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigCustomResourceProviderHandler2B99DCC6",
            "Arn",
          ],
        },
      },
      "Type": "Custom::QueryLoggingConfig",
      "UpdateReplacePolicy": "Delete",
    },
    "Key961B73FD": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "S3QueryLoggingTestQueryLoggingConfig630BFF1D": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomQueryLoggingConfigCustomResourceProviderLogGroup58425034",
      ],
      "Properties": {
        "DestinationArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":s3:::testbucket",
            ],
          ],
        },
        "Name": "S3QueryLoggingTest",
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigCustomResourceProviderHandler2B99DCC6",
            "Arn",
          ],
        },
      },
      "Type": "Custom::QueryLoggingConfig",
      "UpdateReplacePolicy": "Delete",
    },
    "TestLogGroup4EEF7AD4": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 731,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "TestQueryLoggingAssocQueryLoggingConfigAssociationE89E2286": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "CustomQueryLoggingConfigAssociationCustomResourceProviderLogGroupD12EADAE",
      ],
      "Properties": {
        "ResolverQueryLogConfigId": {
          "Fn::GetAtt": [
            "S3QueryLoggingTestQueryLoggingConfig630BFF1D",
            "attrId",
          ],
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomQueryLoggingConfigAssociationCustomResourceProviderHandlerFDE723DC",
            "Arn",
          ],
        },
        "VpcId": "TestVpc",
      },
      "Type": "Custom::QueryLoggingConfigAssociation",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;
